--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
        <link rel="stylesheet" href="main.css">
    </head>
    <body>
+        <button id="buttonGrid">Create Grid</button>
         <div class="container"></div>
    </body>
 </html>
